--- a/contacto.html
+++ b/contacto.html
@@ -46,6 +46,7 @@
         <p>Se encargó de realizar la página web, crear el logo del local, y redactar el documento en Word.</p>
       </div>
     </div>
+</div>
 <div class="fila">
 <div class="participante participante3">
       <img src="jesus.jpg" alt="Participante 3">
